# testTriArborX

./: CMakeLists.txt  testTri.cpp
